# atlas_knowledge

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  dev.ps1  dev.sh  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  middleware.py
backend/app/api/routers/: auth.py  chat.py  conversations.py  documents.py  health.py  me.py
backend/app/api/schemas/: auth.py  conversations.py  documents.py
backend/app/application/: auth_service.py  chat_orchestrator.py  conversation_service.py  document_service.py  prompts.py
backend/app/core/: config.py  db.py  errors.py  ids.py  logging.py  model_registry.py  pagination.py  security.py  wiring.py
backend/app/domain/entities/: auth_context.py  chunk.py  document.py
backend/app/domain/ports/: chunking.py  llm.py  parser.py  storage.py  task_queue.py
backend/app/infrastructure/db/: models.py  session.py
backend/app/infrastructure/llm/: openai_compat.py
backend/app/infrastructure/parsing/: blocks.py  docx.py  (+4 more)
backend/app/workers/: celery_app.py  run_async.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_users_auth.py  0003_conversations_messages.py  0004_model_usage_logs.py  0005_phase2.py
backend/tests/: conftest.py  test_auth.py  test_chat_api.py  test_chat_orchestrator.py  test_chunking.py  test_conversations.py  test_documents.py  test_errors.py  test_health.py  test_llm_adapter.py  test_local_storage.py  test_model_registry.py  test_parsers.py  test_request_context.py  test_titles_task.py
(+54 files in other folders)
