[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "falskapi-backend"
version = "0.0.0"
description = "AI 知識問答平台 — 後端(FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "structlog>=24.4",
    "uuid-utils>=0.10",
    "email-validator>=2.2",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "anyio>=4.7",
    "httpx>=0.28",
    "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# 排除:虛擬環境與 Alembic 遷移(env.py 依賴 alembic 執行期注入的全域,不納入嚴格型別檢查)
exclude = ["^\\.venv", "^migrations"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
